@@ -3,8 +3,12 @@ postgresql-common (51) unstable; urgency=low
   * PgCommon.pm: Add function read_pg_hba() to parse pg_hba.conf.
   * Add t/005_PgCommon.t: Designated for testing PgCommon.pm library
     functions; test read_pg_hba() for now.
+  * pg_ctlcluster: Check pg_hba.conf if the database superuser can connect
+    locally without a password. If not, disable startup checks to avoid asking
+    for the superuser password. (https://launchpad.net/bugs/37640)
+  * t/030_errors.t: Test above pg_ctlcluster checks.
 
- -- Martin Pitt <mpitt@debian.org>  Mon,  1 May 2006 12:41:26 +0200
+ -- Martin Pitt <mpitt@debian.org>  Mon,  1 May 2006 14:38:53 +0200
 
 postgresql-common (50) unstable; urgency=low
 
